--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
   padding: 80px;
   box-sizing: border-box;
   overflow-y: auto;
+   -webkit-overflow-scrolling: touch; /* iOSでヌルヌル */
 
   z-index: 20;  /* ←追加 */
   opacity: 0;               /* ← 透明スタート */
@@ -39,6 +40,14 @@
   opacity: 1;
   pointer-events: auto;
   }
+
+  /* INFO 内のアルバムジャケット */
+.albumArt{
+  display: block;
+  width: min(320px, 80vw);
+  height: auto;
+  margin: 24px 0;
+}
 
   #toggleInfo {
     position: fixed;
@@ -273,8 +282,15 @@ function mousePressed() {
 }
 
 function touchStarted() {
+  const infoLayer = document.getElementById("infoLayer");
+
+  // INFOが開いてる時は、ページ側のスクロールを優先
+  if (infoLayer && infoLayer.classList.contains("active")) {
+    return true; // ← 重要：p5にイベントを奪わせない
+  }
+
   handleInteraction();
-  return false;
+  return false; // ← GAME中だけはこれでOK
 }
 
 class VisualLayer {
